# rag-pinecone

./: README.md  main.ipynb  pc.ipynb  pyproject.toml
